--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutter_application_1">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <base href="/flutter-demo/"/>
 
   <title>flutter_application_1</title>
   <link rel="manifest" href="manifest.json">
