--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/flutter-demo/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -25,7 +25,6 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutter_application_1">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <base href="/flutter-demo/"/>
 
   <title>flutter_application_1</title>
   <link rel="manifest" href="manifest.json">
@@ -35,7 +34,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1184648218';
+    var serviceWorkerVersion = '2355454754';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
